Minor UI fixes
-Fixed CalendarView and NotesView dimension

-Fixed SchedulesView and ScheduleCard dimension

-Fixed notes incorrectly showing on a different calendar and date

-Fixed special-chars not accepted by the database

-Fixed static dimension for notes and schedules when title or description is too long

Bugs:

-Notes and Schedule title and descriptions not text-wrapping and not displaying ellipses "...", apparently text-wrapping: ellipses only works on webkit browsers, will find solution for this...

-Limit characters for title and description of notes...

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -4,6 +4,8 @@
 
 #schedules-view{
     display: none;
+    min-width: 520px !important;
+    max-width: 520px !important;
 }
 
 .sidebar{
@@ -13,6 +15,11 @@
 
 .profile{
     height: 100px;
+}
+
+.calendar-note-section{
+    min-width: 570px !important;
+    max-width: 570px !important;
 }
 
 .calendar{
@@ -256,11 +263,43 @@
 
 .note{
     height: 100px;
-    width: 85%;
+    min-width: 490px !important;
+    max-width: 490px !important;
     background-color: #FFF;
     padding: 0px 50px 0px 0px;
     border: 0.5px solid var(--dark-hl);
     border-radius: 15px;
     margin: 15px;
     box-shadow: 1px 1px 5px 5px rgba(0, 0, 0, 0.05);
+}
+
+.note .info{
+    height: 100%;
+    padding: 15px;
+}
+
+.note .handle{
+    height: 100%;
+    border-right: 0.5px solid var(--dark-hl);
+    margin-right: 15px;
+}
+
+.note-title{
+    height: 50%;
+    max-width: 490px;
+    overflow: hidden;
+}
+
+.note-desc{
+    height: 50%;
+    max-width: 490px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.note-desc p{
+    overflow: hidden;
+    
+    word-wrap: break-word;
+    
 }
