--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -69,6 +69,16 @@
     align-items: center;
 }
 
+.align-start{
+    align-items: start;
+}
+
+
+.align-end{
+    align-items: end;
+}
+
+
 .regular{
     font-weight: 400;
 }
